Revision history for Test::Run::Plugin::TrimDisplaysFilenames

        - Converted thet tests to YAML::XS instead of YAML.pm.

0.0103  Mon May  4 21:20:35 IDT 2009
        - Converted from NEXT.pm to MRO::Compat .

0.0102  Tue Aug 19 23:01:21 IDT 2008
        - Converted to private_backend_plugins().
        - Now depending on Test-Run-CmdLine-0.0110 which fixes the 
        relevant bugs.

0.0101  Mon Aug 18 20:46:52 IDT 2008
        - Changed _initialize to _init.
            - In accordance to the new Test-Run.
        - Bumped the dependencies in the Build.PL.
        - Fixed the tests.
        - Refactored ib/Test/Run/Plugin/TrimDisplayedFilenames.pm .

0.01    Fri Apr  4 12:38:36 IDT 2008
        - First version, released on an unsuspecting world.
        - Forked from a previous module.
        - very basic functionality - only fromre: and keep:.